syntax = "proto3";

message CompareSwapRequest {
	int32 slot = 1;
	int32 invalue = 2;
}
message CompareSwapReply {
	bool status = 1; // true if not frozen; discard value otherwise
	int32 outvalue = 2;
}

service BoneyService {
	rpc CompareAndSwap(CompareSwapRequest) returns (CompareSwapReply);
}

